--- a/template_config.yaml
+++ b/template_config.yaml
@@ -49,6 +49,26 @@ ref:
 
 
 parameters:
+    umi_processing: 
+        # By default RNAseq is performed without UMIs. 
+        enabled: False
+        # If the RNA contains UMIs, the UMI pattern must be specified:
+        # N bases will be treated  as UMI and X bases will be treated as
+        # library barcode that must be kept in the read. The same pattern 
+        # could be expressed as NNNNNN.
+        umi_pattern1: "XXXXXXNNNNNNNNNN"
+        # By default, it is assummed that UMI sequence it is only on 
+        # 5' end of read1. If there are UMIs on both reads, both
+        # umi_pattern1 (in read1) and umi_pattern2 (in read2) must be 
+        # specified and will be searched in the 5' end of both reads.
+        umi_pattern2: ""
+        # If one read contains umi sequences both in 5' and 3' ends, both umis
+        # must be specified in the regular expression. For example, in a 
+        # single-end paired end sequencing where forward reads contains 4 
+        # base UMI at their 5’ end and a 4 base UMI at their 3’ end  the regular 
+        # expression would be: 
+        # ^(?P<umi_1>.{4}).+(?P<umi_2>.{4})$
+
     downsampling:
         enabled: False
         n: 10000000 # Downsample to 10 million reads
@@ -56,7 +76,11 @@ parameters:
 
     trimming:
         adapters: "resources/trimming/adapters.fa"
-        extra: " ktrim=r k=23 mink=11 hdist=1"
+        extra: "ktrim=r k=23 mink=11 hdist=1"
+        # If your data is Lexogen QuantSeq 3‘ mRNA-Seq, use the trimming 
+        # parameters in the following line, replacing resource_dir with
+        # your own directory.
+        #extra: "ref=/resource_dir/polyA.fa.gz,/resource_dir/truseq.fa.gz k=13 ktrim=r useshortkmers=t mink=5 qtrim=r trimq=10 minlength=20"
 
     # By default fastq_screen is not performed. In case the user want to run
     # fastq_screen the enabled value must be set to True.
@@ -90,6 +114,7 @@ parameters:
         # e.g. "-i 'gene_id'" for ENSEMBL gene IDs or "-i 'gene_name'" for gene SYMBOL
         extra: "-i 'gene_id'"
         # Mode: "union", "intersection-strict" or "intersection-nonempty" (default: union)
+        # If your data is Lexogen QuantSeq 3‘ mRNA-Seq, use the intersection-nonempty mode
         mode: "-m union"
         # Strandness: "yes", "no" or "reverse" (default: yes)
         strandedness: "-s yes"
@@ -109,7 +134,7 @@ parameters:
     deseq2:
         # path or URL to design matrix
         designmatrix: "designmatrix.tsv"
-        design: "~date + condition"
+        design: "~condition"
 
 
 
@@ -154,6 +179,16 @@ resources:
         mem_mb:  8192
         runtime: 60
 
+    umi_extract_single_end:
+        threads: 8
+        mem_mb: 8192
+        walltime: 60
+
+    umi_extract_paired_end:
+        threads: 8
+        mem_mb: 8192
+        walltime: 60
+
     trim_adapters_single_end:
         threads: 8
         mem_mb:  8192
@@ -188,7 +223,17 @@ resources:
         threads: 8
         mem_mb:  4096
         runtime: 10
-        
+
+    umi_dedup_single_end:
+        threads: 8
+        mem_mb:  32000
+        runtime: 120
+
+    umi_dedup_paired_end:
+        threads: 8
+        mem_mb:  64000
+        runtime: 200
+
     htseq_count:
         threads: 8
         mem_mb:  64000
@@ -258,3 +303,4 @@ resources:
         threads: 1
         mem_mb:  4096
         runtime: 10
+
